--- a/Lectures/L11_Data_science_ethics/L11_data_science_ethics.html
+++ b/Lectures/L11_Data_science_ethics/L11_data_science_ethics.html
@@ -19,7 +19,7 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x4fc771bdfb14ba9b2a4d5136647f4b2","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"e0809517ce7c4423a54ad3ba949b49cc","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -139,6 +139,23 @@ What is wrong with this picture? How would you correct it?
 ]
 
 ---
+
+# A recent example of stretching the axes... 
+
+&lt;img src="img/Screenshot from 2022-03-21 11-35-59edit.png" width="60%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+&lt;img src="img/FKIqqi3WUAYEQhB.png" width="60%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+&lt;img src="img/FKIqtMZXwAgH91t.png" width="60%" style="display: block; margin: auto;" /&gt;
+
+---
+
 
 .question[
 What is wrong with this picture? How would you correct it?
@@ -266,6 +283,12 @@ País read *"Catalan public opinion swings toward 'no' for independence, says su
 
 
 
+
+```
+## Warning: `guides(&lt;scale&gt; = FALSE)` is deprecated. Please use
+## `guides(&lt;scale&gt; = "none")` instead.
+```
+
 &lt;img src="L11_data_science_ethics_files/figure-html/catalan-misleading-1.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 .footnote[
@@ -277,10 +300,22 @@ Alberto Cairo. [The truthful art: Data, charts, and maps for communication](http
 ---
 
 .pull-left-wide[
-&lt;img src="L11_data_science_ethics_files/figure-html/unnamed-chunk-22-1.png" width="100%" style="display: block; margin: auto;" /&gt;
+
+```
+## Warning: `guides(&lt;scale&gt; = FALSE)` is deprecated. Please use
+## `guides(&lt;scale&gt; = "none")` instead.
+```
+
+&lt;img src="L11_data_science_ethics_files/figure-html/unnamed-chunk-25-1.png" width="100%" style="display: block; margin: auto;" /&gt;
 ]
 .pull-right-narrow[
-&lt;img src="L11_data_science_ethics_files/figure-html/unnamed-chunk-23-1.png" width="100%" style="display: block; margin: auto;" /&gt;
+
+```
+## Warning: `guides(&lt;scale&gt; = FALSE)` is deprecated. Please use
+## `guides(&lt;scale&gt; = "none")` instead.
+```
+
+&lt;img src="L11_data_science_ethics_files/figure-html/unnamed-chunk-26-1.png" width="100%" style="display: block; margin: auto;" /&gt;
 ]
 
 .footnote[
