--- a/Lectures/L12_modeling_p1/L12_modeling_part_1.html
+++ b/Lectures/L12_modeling_p1/L12_modeling_part_1.html
@@ -19,7 +19,7 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe1bcb6beb7c4404a34095e7e1e8ced2","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x657899b6120483c98f71f36d3b693ba","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -464,7 +464,7 @@ ggplot(data = ht_wt_fit_aug) +
   guides(color = FALSE) +
   scale_color_manual(values = c("#260b27", "#e6b0e7")) +
   geom_text(aes(x = 0, y = 150), label = "Positive residual", color = "#e6b0e7", hjust = 0, size = 8) +
-  geom_text(aes(x = 150, y = 25), label = "Negative residual", color = "#260b27", hjust = 0, size = 8) + 
+  geom_text(aes(x = 100, y = 15), label = "Negative residual", color = "#260b27", hjust = 0, size = 8) + 
   theme_bw()
 ```
 ]
@@ -632,6 +632,8 @@ linear_reg()
 
 ```
 ## Linear Regression Model Specification (regression)
+## 
+## Computational engine: lm
 ```
 
 ---
@@ -673,7 +675,7 @@ linear_reg() %&gt;%
 ```
 ## parsnip model object
 ## 
-## Fit time:  2ms 
+## Fit time:  3ms 
 ## 
 ## Call:
 ## stats::lm(formula = Height_in ~ Width_in, data = data)
@@ -691,7 +693,7 @@ linear_reg() %&gt;%
 ```
 ## parsnip model object
 ## 
-## Fit time:  2ms 
+## Fit time:  1ms 
 ## 
 ## Call:
 ## stats::lm(formula = Height_in ~ Width_in, data = data)
@@ -718,11 +720,11 @@ linear_reg() %&gt;%
 ```
 
 ```
-## # A tibble: 2 x 5
+## # A tibble: 2 × 5
 ##   term        estimate std.error statistic  p.value
 ##   &lt;chr&gt;          &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt;
 ## 1 (Intercept)    3.62    0.254        14.3 8.82e-45
-## 2 Width_in       0.781   0.00950      82.1 0.
+## 2 Width_in       0.781   0.00950      82.1 0
 ```
 
 .large[
@@ -845,7 +847,7 @@ class: middle
 .small[
 
 ```
-## # A tibble: 3,393 x 3
+## # A tibble: 3,393 × 3
 ##    name      Height_in landsALL
 ##    &lt;chr&gt;         &lt;dbl&gt;    &lt;dbl&gt;
 ##  1 L1764-2          37        0
@@ -890,10 +892,10 @@ linear_reg() %&gt;%
 ```
 
 ```
-## # A tibble: 2 x 5
+## # A tibble: 2 × 5
 ##   term              estimate std.error statistic  p.value
 ##   &lt;chr&gt;                &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt;
-## 1 (Intercept)          22.7      0.328      69.1 0.      
+## 1 (Intercept)          22.7      0.328      69.1 0       
 ## 2 factor(landsALL)1    -5.65     0.532     -10.6 7.97e-26
 ```
 
@@ -936,10 +938,10 @@ linear_reg() %&gt;%
 ```
 
 ```
-## # A tibble: 7 x 5
+## # A tibble: 7 × 5
 ##   term            estimate std.error statistic p.value
 ##   &lt;chr&gt;              &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;   &lt;dbl&gt;
-## 1 (Intercept)        14.        10.0     1.40  0.162  
+## 1 (Intercept)        14.0       10.0     1.40  0.162  
 ## 2 school_pntgD/FL     2.33      10.0     0.232 0.816  
 ## 3 school_pntgF       10.2       10.0     1.02  0.309  
 ## 4 school_pntgG        1.65      11.9     0.139 0.889  
@@ -950,14 +952,14 @@ linear_reg() %&gt;%
 
 ---
 
-## Dummy variables
+## binary variables
 
 
 ```
-## # A tibble: 7 x 5
+## # A tibble: 7 × 5
 ##   term            estimate std.error statistic p.value
 ##   &lt;chr&gt;              &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;   &lt;dbl&gt;
-## 1 (Intercept)        14.        10.0     1.40  0.162  
+## 1 (Intercept)        14.0       10.0     1.40  0.162  
 ## 2 school_pntgD/FL     2.33      10.0     0.232 0.816  
 ## 3 school_pntgF       10.2       10.0     1.02  0.309  
 ## 4 school_pntgG        1.65      11.9     0.139 0.889  
@@ -966,7 +968,7 @@ linear_reg() %&gt;%
 ## 7 school_pntgX        2.87      10.3     0.279 0.780
 ```
 
-- When the categorical explanatory variable has many levels, they're encoded to **dummy variables**
+- When the categorical explanatory variable has many levels, they're encoded to **binary variables**
 - Each coefficient describes the expected difference between heights in that particular school compared to the baseline level
 
 ---
@@ -1057,7 +1059,7 @@ linear_reg() %&gt;%
 .small[
 
 ```
-## # A tibble: 3,393 x 3
+## # A tibble: 3,393 × 3
 ##    name      Height_in school_pntg
 ##    &lt;chr&gt;         &lt;dbl&gt; &lt;chr&gt;      
 ##  1 L1764-2          37 F          
@@ -1092,10 +1094,10 @@ linear_reg() %&gt;%
 .small[
 
 ```
-## # A tibble: 7 x 5
+## # A tibble: 7 × 5
 ##   term            estimate std.error statistic p.value
 ##   &lt;chr&gt;              &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;   &lt;dbl&gt;
-## 1 (Intercept)        14.        10.0     1.40  0.162  
+## 1 (Intercept)        14.0       10.0     1.40  0.162  
 ## 2 school_pntgD/FL     2.33      10.0     0.232 0.816  
 ## 3 school_pntgF       10.2       10.0     1.02  0.309  
 ## 4 school_pntgG        1.65      11.9     0.139 0.889  
@@ -1133,7 +1135,7 @@ glance(lin_fit_height_v_width)
 ```
 
 ```
-## # A tibble: 1 x 12
+## # A tibble: 1 × 12
 ##   r.squared adj.r.squared sigma statistic p.value    df  logLik
 ##       &lt;dbl&gt;         &lt;dbl&gt; &lt;dbl&gt;     &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt;   &lt;dbl&gt;
 ## 1     0.683         0.683  8.30     6749.       0     1 -11083.
@@ -1194,7 +1196,7 @@ yx_example
 ```
 
 ```
-## # A tibble: 100 x 2
+## # A tibble: 100 × 2
 ##        y     x
 ##    &lt;int&gt; &lt;int&gt;
 ##  1     1     5
@@ -1224,7 +1226,7 @@ fit_example
 ```
 ## parsnip model object
 ## 
-## Fit time:  2ms 
+## Fit time:  1ms 
 ## 
 ## Call:
 ## stats::lm(formula = y ~ x, data = data)
@@ -1279,7 +1281,7 @@ linear_reg() %&gt;%
 ```
 
 ```
-## [1] 0.9975227
+## [1] 0.9976654
 ```
 
 ---
@@ -1301,7 +1303,7 @@ linear_reg() %&gt;%
 ```
 
 ```
-## [1] 0.0006297344
+## [1] 0.00292956
 ```
 
 ---
